--- a/notebooks/gaussian.ipynb
+++ b/notebooks/gaussian.ipynb
@@ -107,10 +107,10 @@
    ],
    "source": [
     "data = {\n",
-    "    'no_filter': evaluate(x, y),\n",
-    "    'english_filter': evaluate(x2, y2),\n",
-    "    'stop_filter': evaluate(x3, y3),\n",
-    "    'english_stop_filter': evaluate(x4, y4)\n",
+    "    'no_filter': evaluate(x, y, calculation_type),\n",
+    "    'english_filter': evaluate(x2, y2, calculation_type),\n",
+    "    'stop_filter': evaluate(x3, y3, calculation_type),\n",
+    "    'english_stop_filter': evaluate(x4, y4, calculation_type)\n",
     "}"
    ]
   },
