journal written and some variables were renamed

--- a/notebooks/multinomial.ipynb
+++ b/notebooks/multinomial.ipynb
@@ -80,10 +80,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y = naive_bayes(calculation_type, dataset)\n",
-    "x2, y2 = naive_bayes(calculation_type, dataset_english_only)\n",
-    "x3, y3 = naive_bayes(calculation_type, dataset_removed_stop_words)\n",
-    "x4, y4 = naive_bayes(calculation_type, dataset_english_only_no_stop_words)"
+    "test, misled = naive_bayes(calculation_type, dataset)\n",
+    "test_eng, misled_eng = naive_bayes(calculation_type, dataset_english_only)\n",
+    "test_rem_stop, misled_rem_stop = naive_bayes(calculation_type, dataset_removed_stop_words)\n",
+    "test_eng_stop, misled_eng_stop = naive_bayes(calculation_type, dataset_english_only_no_stop_words)"
    ]
   },
   {
@@ -108,10 +108,10 @@
    ],
    "source": [
     "data = {\n",
-    "    'no_filter': evaluate(x, y, calculation_type),\n",
-    "    'english_filter': evaluate(x2, y2, calculation_type),\n",
-    "    'stop_filter': evaluate(x3, y3, calculation_type),\n",
-    "    'english_stop_filter': evaluate(x4, y4, calculation_type)\n",
+    "    'no_filter': evaluate(test, misled, calculation_type),\n",
+    "    'english_filter': evaluate(test_eng, misled_eng, calculation_type),\n",
+    "    'stop_filter': evaluate(test_rem_stop, misled_rem_stop, calculation_type),\n",
+    "    'english_stop_filter': evaluate(test_eng_stop, misled_eng_stop, calculation_type)\n",
     "}"
    ]
   },
